fix n+1 and authorization
just for ChannelRepository.java