@@ -10,6 +10,7 @@ import com.ws.yay_backend.entity.Channel;
 import com.ws.yay_backend.entity.Community;
 import com.ws.yay_backend.entity.CommunityMember;
 import com.ws.yay_backend.entity.CommunityRole;
+import com.ws.yay_backend.entity.CommunityRoleName;
 import com.ws.yay_backend.entity.User;
 import com.ws.yay_backend.dto.request.CreateCommunityRequest;
 import com.ws.yay_backend.dto.response.GetChannelResponse;
@@ -17,7 +18,6 @@ import com.ws.yay_backend.dto.response.GetCommunityResponse;
 import com.ws.yay_backend.dto.response.GetMemberResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
-import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
@@ -33,8 +33,6 @@ public class CommunityServiceImpl implements CommunityService {
   private final CommunityRoleRepository communityRoleRepository;
   private final ChannelRepository channelRepository;
   private final AuthUtilsComponent authUtilsComponent;
-  private static final String DEFAULT_MEMBER_ROLE_NAME = "Member";
-  private static final String ADMIN_ROLE_NAME = "Admin";
 
   @Autowired
   public CommunityServiceImpl(
@@ -53,14 +51,14 @@ public class CommunityServiceImpl implements CommunityService {
 
   @Override
   public List<GetCommunityResponse> getAll() {
-    return communityRepository.findAll().stream()
+    return communityRepository.findAllWithOwner().stream()
         .map(community -> new GetCommunityResponse(
             community.getId(),
             community.getName(),
             community.getOwner().getId(),
             community.getOwner().getUsername()
         ))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
@@ -72,7 +70,7 @@ public class CommunityServiceImpl implements CommunityService {
     Community saved = communityRepository.save(community);
 
     // Add owner as a member with Admin role
-    CommunityRole adminRole = communityRoleRepository.findByName(ADMIN_ROLE_NAME)
+    CommunityRole adminRole = communityRoleRepository.findByName(CommunityRoleName.ADMIN.getValue())
         .orElseThrow(() -> new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Admin role not found"));
     
     CommunityMember ownerMembership = new CommunityMember(saved, owner, adminRole);
@@ -89,7 +87,7 @@ public class CommunityServiceImpl implements CommunityService {
   @Override
   @Transactional(readOnly = true)
   public GetCommunityResponse getCommunity(long id) {
-    Community community = communityRepository.findById(id)
+    Community community = communityRepository.findWithOwnerById(id)
         .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Community not found"));
     return new GetCommunityResponse(
         community.getId(),
@@ -101,20 +99,42 @@ public class CommunityServiceImpl implements CommunityService {
 
   @Override
   @Transactional
-  @PreAuthorize("hasRole('ADMIN') or @communityRepository.existsByIdAndOwner_Id(#id, authentication.principal.id)")
   public void deleteCommunity(long id) {
-    communityRepository.deleteById(id);
+    Long userId = authUtilsComponent.getAuthenticatedUserId();
+    
+    Community community = communityRepository.findWithOwnerById(id)
+        .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Community not found: " + id));
+    
+    boolean isOwner = community.getOwner().getId().equals(userId);
+    boolean isAdmin = authUtilsComponent.isCurrentUserAdmin();
+    
+    if (!isOwner && !isAdmin) {
+      throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Only the community owner can delete this community");
+    }
+    
+    communityRepository.delete(community);
   }
 
   @Override
   @Transactional(readOnly = true)
-  @PreAuthorize("hasRole('ADMIN') or @communityMemberRepository.existsByKey_CommunityIdAndKey_UserId(#id, authentication.principal.id)")
   public List<GetMemberResponse> getAllMembers(Long id) {
-    return communityRepository.findWithMembersById(id)
+    Long userId = authUtilsComponent.getAuthenticatedUserId();
+    
+    if (!communityRepository.existsById(id)) {
+      throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Community not found: " + id);
+    }
+    
+    boolean isMember = communityMemberRepository.existsByKey_CommunityIdAndKey_UserId(id, userId);
+    boolean isAdmin = authUtilsComponent.isCurrentUserAdmin();
+    
+    if (!isMember && !isAdmin) {
+      throw new ResponseStatusException(HttpStatus.FORBIDDEN, "You must be a member to view members");
+    }
+    
+    return communityRepository.findWithMembersAndUsersById(id)
         .map(c -> c.getMembers().stream()
             .map(cm -> new GetMemberResponse(cm.getUser().getId(), cm.getUser().getUsername()))
-            .collect(Collectors.toList())
-        )
+            .collect(Collectors.toList()))
         .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Community not found: " + id));
   }
 
@@ -123,7 +143,7 @@ public class CommunityServiceImpl implements CommunityService {
   public List<GetCommunityWithChannelsResponse> getUserOwnCommunities() {
     User user = authUtilsComponent.getAuthenticatedUser();
 
-    List<Community> communities = communityRepository.findByMembers_User_id(user.getId());
+    List<Community> communities = communityRepository.findAllWithOwnerByMembers_User_id(user.getId());
 
     if (communities.isEmpty()) {
       return List.of();
@@ -131,7 +151,7 @@ public class CommunityServiceImpl implements CommunityService {
 
     List<Long> communityIds = communities.stream().map(Community::getId).toList();
 
-    List<Channel> channels = channelRepository.findAllByCommunity_IdIn(communityIds);
+    List<Channel> channels = channelRepository.findAllWithCommunityByCommunity_IdIn(communityIds);
     Map<Long, List<GetChannelResponse>> communityIdToChannels = channels.stream()
         .map(c -> new GetChannelResponse(
             c.getId(),
@@ -155,12 +175,21 @@ public class CommunityServiceImpl implements CommunityService {
 
   @Override
   @Transactional(readOnly = true)
-  @PreAuthorize("""
-      hasRole('ADMIN') or
-      @communityMemberRepository.existsByKey_CommunityIdAndKey_UserId(#communityId, authentication.principal.id)
-      """)
   public List<GetChannelResponse> getCommunityChannels(Long communityId) {
-    return channelRepository.findAllByCommunity_Id(communityId).stream()
+    Long userId = authUtilsComponent.getAuthenticatedUserId();
+    
+    if (!communityRepository.existsById(communityId)) {
+      throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Community not found: " + communityId);
+    }
+    
+    boolean isMember = communityMemberRepository.existsByKey_CommunityIdAndKey_UserId(communityId, userId);
+    boolean isAdmin = authUtilsComponent.isCurrentUserAdmin();
+    
+    if (!isMember && !isAdmin) {
+      throw new ResponseStatusException(HttpStatus.FORBIDDEN, "You must be a member to view channels");
+    }
+    
+    return channelRepository.findAllWithCommunityByCommunity_Id(communityId).stream()
         .map(channel -> new GetChannelResponse(
             channel.getId(),
             channel.getName(),
